# weirdtext-package

./: README.md  setup.cfg  setup.py
docs/source/: conf.py  index.rst
tests/: decoder_tests.py  encoder_tests.py
weirdtext/: decoder.py  encoder.py
