[metadata]
# replace with your username:
name = weirdtext-encoder
version = 0.0.1
url = https://github.com/Mat2314/weirdtext-package 
author = Mateusz Rędzia 
author_email = 123@example.com 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = Small example package 
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6
